--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ dotenv = "0.15.0"
 reqwest = {version = "0.11.8", features = ["blocking", "json"]}
 serde = {version = "1.0.132", features = ["derive"]}
 tokio = {version= "1.15.0", features = ["full"]}
+ureq = { version = "2.4.0", features = ["json", "charset"] }
